--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "server untuk aplikasi foto wisata",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -18,11 +19,13 @@
   },
   "homepage": "https://github.com/foto-wisata/server-foto-wisata#readme",
   "dependencies": {
+    "@google-cloud/storage": "^2.5.0",
     "bcrypt": "^3.0.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.6.0"
+    "mongoose": "^5.6.0",
+    "multer": "^1.4.1"
   },
   "devDependencies": {
     "dotenv": "^8.0.0"
